made changes to alerts

--- a/client/index.css
+++ b/client/index.css
@@ -69,3 +69,14 @@ code {
 #TestVis{
   background: white;
 }
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
