--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -199,7 +199,7 @@ li.ps-menuitem-root {
 
 .setup-bg {
   position: relative;
-  height: 100%;
+  min-height: 103vh;
   background-image: linear-gradient(
     109.6deg,
     rgba(156, 252, 248, 1) 11.2%,
@@ -230,8 +230,9 @@ li.ps-menuitem-root {
 .buttonContainer {
   display: flex;
   flex-direction: column;
-  justify-content: ;
   gap: 0px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 10px;
 }
 
